Css correct menu on small screens

--- a/styles/filtered-temples-large.css
+++ b/styles/filtered-temples-large.css
@@ -47,6 +47,10 @@
     font-size: 1.2rem;
   }
 
+  .nav-links.active {
+    display: flex !important; 
+  }
+
   header {
     padding: 1.5rem 0; 
   }
